user organizado igual que en swagger
