# src/routes/user.route.js
@@ -16,27 +16,28 @@ const { validarSchemaComment, validarSchemaUpdateComment } = require("../middlew
 const { validarSchemaPost } = require("../middlewares/post.middleware");
 const { deleteComment, createComment, updateComment } = require("../controllers/comment.controller");
 
-
 route.get("/", findAllUsers);
-
-route.get("/:idUser", validarById(User), findUserByPK);
-
-route.get("/:idUser", validarById(User), findUserByPK);
-
-route.get("/:idUser/posts", validarById(User), getPostsFromUser);
 
 route.post("/", validarSchemaUser, existAttribute(User,"nickName") ,createUser);
 
-route.post("/:idUser/post", validarById(User), validarSchemaPost, createPostFromUser); //Aca tambien se crean las imagenes y los tags del post.
 
-route.post("/:idUser/comment", validarById(User), validarSchemaComment, validarIdPorBody(Post), createComment);
+route.get("/:idUser", validarById(User), findUserByPK);
+
+route.put("/:idUser", validarById(User), existAttribute(User,"nickName"), validarSchemaUserUpdate, updateUser);
 
 route.delete("/:idUser", validarById(User), deleteUser);
 
+
+route.post("/:idUser/post", validarById(User), validarSchemaPost, createPostFromUser); //Aca tambien se crean las imagenes y los tags del post.
+
+route.get("/:idUser/posts", validarById(User), getPostsFromUser);
+
+
+route.post("/:idUser/comment", validarById(User), validarSchemaComment, validarIdPorBody(Post), createComment);
+
+route.put("/:idUser/comment", validarById(User), validarSchemaUpdateComment, updateComment);
+
 route.delete("/:idUser/comment",validarById(User), validarIdPorBody(Comment), deleteComment);
 
-route.put("/:idUser", validarById(User), validarSchemaUpdateComment, updateComment);
-
-route.put("/:idUser", validarById(User), existAttribute(User,"nickName"), validarSchemaUserUpdate, updateUser);
 
 module.exports = route;
